# google-generative-language-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/v1beta/: mod.rs
src/v1beta/models/: list.rs  mod.rs
